# timer-tool

./: .gitignore  INSTALL.md  Makefile  README.md  contador_horas.py  executar.bat  executar.sh  pyproject.toml  requirements.txt  setup.py
data/: .gitkeep
scripts/: executar.bat  executar.sh
src/horas_trabalhadas/: __init__.py  __main__.py  contador_horas.py
